force-app/main/default/objects/External_Content__kav/fields/Specifics__c.field-meta.xml
<CustomField>
    <fullName>Specifics__c</fullName>
    <label>Specifics</label>
    <length>64500</length>
    <type>Html</type>
</CustomField>