force-app/main/default/objects/External_Content__kav/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Vendor_Detail__c</referenceTo>
    <relationshipLabel>External Content</relationshipLabel>
    <relationshipName>External_Content</relationshipName>
    <type>Lookup</type>
</CustomField>